# runfiles_repro

./: .gitignore  BUILD.bazel  MODULE.bazel
bar/: BUILD.bazel  bar.txt  test.go
